Fix menu positionning on small screens

--- a/orgapy/static/orgapy/css/orgapy.css
+++ b/orgapy/static/orgapy/css/orgapy.css
@@ -474,7 +474,6 @@ blockquote p {
 }
 
 .dropdown .menu {
-    animation: slide-down .2s ease-in-out 1;
     display: none;
     left: 0;
     max-height: 50vh;
@@ -482,18 +481,6 @@ blockquote p {
     position: absolute;
     top: 100%;
     z-index: 2;
-}
-
-@keyframes slide-down {
-    0% {
-        opacity: 0;
-        transform: translateY(-1.6rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
 
 .dropdown.active .menu,
